реализовал логику Insurance и расчет страховки